@@ -1,3 +1,8 @@
+2010-04-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* ucm.el (ucm-checkin-activity): use `vc-setup-buffer' when
+	setting up the diff buffer
+
 2010-04-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (vc-version-backup-file-name): use just the last
